app/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user3-was
  labels: 
    owner: user3
    app: was
