app/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user3-was-svc
  namespace: user3-was
  labels:
    app: was
    owner: user3
spec:
  type: ClusterIP
  selector:
    app: was
    owner: user3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
