app/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user3-was-ing
  namespace: user3-was
spec:
  ingressClassName: nginx
  rules:
    - host: was.user3.goping.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user3-was-svc
                port:
                  number: 80
